--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="footer-container">
   <footer>
     <div class="footer-text-box">
-      <p class="footer-text">&copy; 2022 ECskor</p>
+      <p class="footer-text">&copy; 2022 Shopnado</p>
     </div>
     <div class="icons">
       <a href="#" class="icon"
