Last fixes before submission

--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
   <header>
     <nav>
     <div class="nav-links">
-      <a class="nav-link" href="index.html" class="logo">Store</a>
-      <a class="nav-link" href="about.html">About us</a>
-      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link" href="index.html">Store</a>
       <i class="bx bxs-shopping-bag cart-icon" id="cart-icon"></i>
       <div class="cart">
         <h2 class="cart-title">Your Cart</h2>
         <i class="bx bx-x close-cart" id="close-cart"></i>
         <div class="createCart"></div>
-        <i class='bx bxs-trash-alt cart-remove' id="removebutton"></i>
+        <i class='bx bxs-trash-alt cart-remove' id="deleteBtn"></i>
         <button type="button" class="btn-buy" id="buyBtn">Buy now</button>
-        <div id="priceTotal">Total: 0$</div>
+        <div id="priceTotal">Total: $0</div>
       </div>
     </div>
   </nav>
